fix build, use dw
<==== Mercurial data ====>
Branch: isd_edge

--- a/build_environment/pom.xml
+++ b/build_environment/pom.xml
@@ -86,7 +86,7 @@
                 <artifactId>maven-antrun-plugin</artifactId>
                 <version>1.7</version>
                 <executions>
-                    <execution>
+                    <!-- <execution>
                         <id>update-buildenv</id>
                         <phase>generate-sources</phase>
                         <goals>
@@ -104,7 +104,7 @@
                             </target>
                             <skip>${rsync.skip}</skip>
                         </configuration>
-                    </execution>    
+                    </execution>     -->
                 </executions>
             </plugin>            
             <plugin>
