--- a/macsetup/client-dmg/pom.xml
+++ b/macsetup/client-dmg/pom.xml
@@ -18,7 +18,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>client-dmg</artifactId>
 	<packaging>pom</packaging>
-	<name>Client Deb Package</name>
+	<name>Client Mac Package</name>
 
     <properties>
         <!-- Change it to point relatively to the root-->
