fixed build_environment activation on Linux
<==== Mercurial data ====>
Branch: release_2.2

--- a/pom.xml
+++ b/pom.xml
@@ -210,11 +210,11 @@
             <!-- preparing build-environment only if it is not ready. The last operation is installing llutil to x64 python virtualenv so it can be used as a criteria -->
             <activation>
                 <os>
-                    <family>Unix</family>
+                    <family>unix</family>
                 </os>            
                 <file>
                     <!-- the dumb activator does not recognize variables so I cannot put libdir here -->
-                    <missing>/build_environment/target/x64/python/lib/python2.7/site-packages/llutil-0.4-py2.7-linux-x86_64.egg/llutil.py </missing>
+                    <missing>build_environment/target/x64/python/lib/python2.7/site-packages/llutil-0.4-py2.7-linux-x86_64.egg/llutil.py </missing>
                 </file> 
             </activation>
             <modules>	
