--- a/pom.xml
+++ b/pom.xml
@@ -189,7 +189,7 @@
 
     <profiles>
         <profile>
-            <id>build-env-win</id>
+            <id>build-env</id>
             <!-- preparing build-environment only if it is not ready. The last operation is installing llutil to x64 python virtualenv so it can be used as a criteria -->
             <activation>
                 <os>
@@ -197,7 +197,7 @@
                 </os>            
                 <file>
                     <!-- the dumb activator does not recognize variables so I cannot put libdir here -->
-                    <missing>build_environment/target/**/site-packages/llutil-0.4-py2.7-*.egg/llutil.py </missing>
+                    <missing>build_environment/target/buildenv.timestamp</missing>
                 </file> 
             </activation>
             <modules>	
@@ -471,3 +471,4 @@
         </profile>	      
     </profiles>	
 </project>
+
