fix mediaserver startup script
<==== Mercurial data ====>
Branch: release_2.2

--- a/debsetup/mediaserver-deb/maven/filter-resources/init/networkoptix-mediaserver.conf
+++ b/debsetup/mediaserver-deb/maven/filter-resources/init/networkoptix-mediaserver.conf
@@ -17,6 +17,7 @@ stop on runlevel [016]
 # Automatically restart process if crashed
 respawn
 
+env LD_LIBRARY_PATH=/opt/${deb.customization.company.name}/mediaserver/lib
 # env VMS_PLUGIN_DIR=/opt/${deb.customization.company.name}/mediaserver/lib
 
 pre-start script
