add logging and foreigner fix
<==== Mercurial data ====>
Branch: release_2.2

--- a/debsetup/appserver-deb/maven/filter-resources/init/networkoptix-entcontroller.conf
+++ b/debsetup/appserver-deb/maven/filter-resources/init/networkoptix-entcontroller.conf
@@ -17,5 +17,5 @@ stop on runlevel [016]
 respawn
 
 # Start the process
-exec /opt/${deb.customization.company.name}/entcontroller/bin/entcontroller
+exec /opt/${deb.customization.company.name}/entcontroller/bin/entcontroller --logging=debug
 
