Fixed some compile with GCC errors
<==== Mercurial data ====>
Branch: new_ec

--- a/build_environment/pom.xml
+++ b/build_environment/pom.xml
@@ -114,7 +114,7 @@
                 <artifactId>maven-antrun-plugin</artifactId>
                 <version>1.7</version>
                 <executions>
-                    <!-- <execution>
+                    <execution>
                         <id>update-buildenv</id>
                         <phase>generate-sources</phase>
                         <goals>
@@ -133,7 +133,7 @@
                             </target>
                             <skip>${rsync.skip}</skip>
                         </configuration>
-                    </execution>     -->
+                    </execution>
                 </executions>
             </plugin>            
             <plugin>
