Fixed GCC compile errors & warnings
<==== Mercurial data ====>
Branch: new_ec

--- a/mediaserver/pom.xml
+++ b/mediaserver/pom.xml
@@ -27,7 +27,7 @@
         <global.libs>-lcommon -lavcodec -lavdevice -lavfilter -lavformat -lavutil -lswscale -lpostproc -lprotobuf -lonvif</global.libs>
         <!--Specific os libs used-->
         <windows.oslibs>Ws2_32.lib DbgHelp.lib sigar.lib -lIphlpapi -lwinmm -lssleay32 -llibeay32 appserver2.lib</windows.oslibs>
-        <linux.oslibs>-lssl -lcrypto -lsigar -lfaac</linux.oslibs>
+        <linux.oslibs>-lssl -lcrypto -lsigar -lfaac -lappserver2</linux.oslibs>
         <windows.oslibs.release></windows.oslibs.release>
         <windows.oslibs.debug></windows.oslibs.debug>                
         <mac.oslibs>-lssl -lbz2 -framework IOKit -framework CoreServices -lsigar-universal64-macosx</mac.oslibs>
