setting up build environment for building ec2 on isd
<==== Mercurial data ====>
Branch: new_ec

--- a/pom.xml
+++ b/pom.xml
@@ -373,8 +373,8 @@
             <properties>
                 <qt.spec>linux-arm-gnueabi-g++</qt.spec>
                 <toolchain.version>2013.11</toolchain.version>
-                <compiler>${toolchain.version}</compiler>
-                <openssl.version>1.0.1f-SNAPSHOT</openssl.version>
+                <compiler>2011.09</compiler>
+                <openssl.version>1.0.0j-SNAPSHOT</openssl.version>
                 <ffmpeg.version>0.11.4-SNAPSHOT</ffmpeg.version>
                 <additional.defines>DISABLE_ALL_VENDORS DISABLE_SOFTWARE_MOTION_DETECTION DISABLE_DESKTOP_CAMERA</additional.defines>
             </properties>
