fixed default mediaserver.conf file for edge
<==== Mercurial data ====>
Branch: new_ec

--- a/edge_firmware/isd/maven/filter-resources/usr/local/apps/networkoptix/mediaserver/etc/mediaserver.conf
+++ b/edge_firmware/isd/maven/filter-resources/usr/local/apps/networkoptix/mediaserver/etc/mediaserver.conf
@@ -1,7 +1,7 @@
 [General]
-appserverHost=127.0.0.1
-appserverPort=7004
-secureAppserverConnection=0
+appserverHost=file:///opt/networkoptix/mediaserver/
+appserverPort=7001
+secureAppserverConnection=1
 dataDir=/media/mmcblk0p1/mserver.data/
 eventsDBFilePath=/tmp/mserver_events.db
 authenticationEnabled=false
