removed some lib dependencies for arm build
<==== Mercurial data ====>
Branch: new_ec

--- a/cpp/pom.xml
+++ b/cpp/pom.xml
@@ -21,6 +21,7 @@
         <libtype/>
         <!--<product.title>${project.name}</product.title>		-->
         <postfix.libs/>
+        <linux.arm.oslibs>${linux.oslibs}</linux.arm.oslibs>
     </properties>
 
     <build>
