--- a/mediaserver/pom.xml
+++ b/mediaserver/pom.xml
@@ -28,6 +28,7 @@
         <!--Specific os libs used-->
         <windows.oslibs>Ws2_32.lib DbgHelp.lib sigar.lib -lIphlpapi -lwinmm -lssleay32 -llibeay32 appserver2.lib</windows.oslibs>
         <linux.oslibs>-lmp3lame -lssl -lcrypto -lsigar -lfaac -lvpx -lvorbisenc -lvorbis -lappserver2</linux.oslibs>
+        <linux.arm.oslibs>-lssl -lcrypto -lsigar -lfaac -lappserver2</linux.arm.oslibs>
         <windows.oslibs.release></windows.oslibs.release>
         <windows.oslibs.debug></windows.oslibs.debug>                
         <mac.oslibs>-lssl -lbz2 -framework IOKit -framework CoreServices -lsigar-universal64-macosx</mac.oslibs>
