--- a/edge_firmware/isd/maven/filter-resources/usr/local/apps/networkoptix/mediaserver/etc/mediaserver.conf
+++ b/edge_firmware/isd/maven/filter-resources/usr/local/apps/networkoptix/mediaserver/etc/mediaserver.conf
@@ -5,3 +5,4 @@ secureAppserverConnection=1
 dataDir=/media/mmcblk0p1/mserver.data/
 eventsDBFilePath=/tmp/mserver_events.db
 authenticationEnabled=false
+systemName=isd_edge
