auto-clean wixsetup before build
<==== Mercurial data ====>
Branch: release_2.2

--- a/wixsetup/pom.xml
+++ b/wixsetup/pom.xml
@@ -25,6 +25,22 @@
         <sourceDirectory>${basedir}</sourceDirectory>
         <plugins>
             <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>2.5</version>
+                <executions>
+                    <execution>
+                        <id>auto-clean</id>
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>clean</goal>
+                        </goals>
+                        <configuration>
+                            <skip>${clean-skip}</skip>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>        
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>2.6</version>
