Adding support for ISD s2 platform
<==== Mercurial data ====>
Branch: new_ec

--- a/build_environment/pom.xml
+++ b/build_environment/pom.xml
@@ -300,7 +300,7 @@
             </dependencies>           
         </profile>
         <profile>
-            <id>noarm</id>
+            <id>desktop</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
                 <property>
