--- a/common/pom.xml
+++ b/common/pom.xml
@@ -24,7 +24,7 @@
         <release.version>${parsedVersion.majorVersion}${parsedVersion.minorVersion}${parsedVersion.incrementalVersion}</release.version>
         <!--Global libs-->
         <!-- <qt.libs>core gui network opengl xml multimedia sql</qt.libs> -->
-        <global.libs>-lprotobuf -lavcodec -lavdevice -lavfilter -lavformat -lavutil -lswscale -lpostproc -lprotobuf -lonvif</global.libs>
+        <global.libs>-lavcodec -lavdevice -lavfilter -lavformat -lavutil -lswscale -lpostproc -lonvif</global.libs>
         <!--Specific os libs used-->
         <windows.oslibs>-lws2_32 -lIphlpapi -lOle32 -lsigar</windows.oslibs>
         <linux.oslibs>-lssl -lsigar</linux.oslibs>
@@ -35,7 +35,7 @@
         <windows.defines>_USING_V110_SDK71_</windows.defines>
         <linux.defines/>
         <mac.defines/>      
-        <qt.libs>core gui network opengl xml multimedia sql</qt.libs>
+        <qt.libs>core gui network xml multimedia sql</qt.libs>
     </properties>   
 
     <build>
