--- a/build_environment/pom.xml
+++ b/build_environment/pom.xml
@@ -23,13 +23,13 @@
 
     <dependencies>
 
-        <dependency>
+        <!-- <dependency>
             <groupId>com.google</groupId>
             <artifactId>protobuf</artifactId>
             <version>${protobuf.version}</version>
             <type>tar.gz</type>
             <classifier>${profile.classifier}-${additional.compiler}</classifier>
-        </dependency>                           
+        </dependency> -->
         <dependency>
             <groupId>org</groupId>
             <artifactId>onvif</artifactId>
@@ -341,7 +341,7 @@
         </profile>      
 
         <profile>
-            <id>linux-arm-isd</id>
+            <id>linux-isd-jaguar</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
                 <os>
@@ -379,6 +379,44 @@
             </dependencies>             
         </profile>
 
+        <profile>
+            <id>linux-isd-s2</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+                <os>
+                    <family>unix</family>
+                    <name>linux</name>
+                </os>
+                <property>
+                    <name>box</name>
+                    <value>isd_s2</value>
+                </property>
+            </activation>
+
+            <dependencies>              
+                <dependency>
+                    <groupId>org.openssl</groupId>
+                    <artifactId>openssl</artifactId>
+                    <version>${openssl.version}</version>
+                    <type>tar.gz</type>
+                    <classifier>${profile.classifier}-${compiler}</classifier>
+                </dependency>
+                <dependency>
+                    <groupId>org.ffmpeg</groupId>
+                    <artifactId>ffmpeg</artifactId>
+                    <version>${ffmpeg.version}</version>
+                    <type>tar.gz</type>
+                    <classifier>${profile.classifier}-${compiler}</classifier>
+                </dependency>      
+                <dependency>
+                    <groupId>com.isdedge</groupId>
+                    <artifactId>vmux</artifactId>
+                    <version>1.0.0-SNAPSHOT</version>
+                    <type>tar.gz</type>
+                    <classifier>${profile.classifier}-${compiler}</classifier>
+                </dependency>      
+            </dependencies>             
+        </profile>
         <profile>
             <id>linux-arm-rpi</id>
             <activation>
