--- a/mediaserver/pom.xml
+++ b/mediaserver/pom.xml
@@ -24,7 +24,7 @@
         <product.title>${mediaserver.name}</product.title>  
         <!--Global libs-->		
         <qt.libs>core network xml sql concurrent multimedia</qt.libs>
-        <global.libs>-lcommon -lavcodec -lavdevice -lavfilter -lavformat -lavutil -lswscale -lpostproc -lprotobuf -lonvif</global.libs>
+        <global.libs>-lcommon -lavcodec -lavdevice -lavfilter -lavformat -lavutil -lswscale -lpostproc -lonvif</global.libs>
         <!--Specific os libs used-->
         <windows.oslibs>Ws2_32.lib DbgHelp.lib sigar.lib -lIphlpapi -lwinmm -lssleay32 -llibeay32 appserver2.lib</windows.oslibs>
         <linux.oslibs>-lmp3lame -lssl -lcrypto -lsigar -lfaac -lvpx -lvorbisenc -lvorbis -lappserver2</linux.oslibs>
