--- a/client/pom.xml
+++ b/client/pom.xml
@@ -6,26 +6,26 @@
     It should also be possible to have one maven project per solution project, 
     and have a parent pom to deletegate the build.
   -->
-	<parent>
-		<artifactId>cpp</artifactId>
-		<groupId>com.networkoptix.hdwitness</groupId>
-		<version>2.3.0-SNAPSHOT</version>
-		<relativePath>../cpp</relativePath>
-	</parent>
+    <parent>
+        <artifactId>cpp</artifactId>
+        <groupId>com.networkoptix.hdwitness</groupId>
+        <version>2.3.0-SNAPSHOT</version>
+        <relativePath>../cpp</relativePath>
+    </parent>
 
-	<groupId>com.networkoptix.hdwitness</groupId>
-	<version>2.3.0-SNAPSHOT</version>
-	<modelVersion>4.0.0</modelVersion>
-	<artifactId>client</artifactId>
-	<packaging>pom</packaging>
-	<name>HD Witness Client</name>
+    <groupId>com.networkoptix.hdwitness</groupId>
+    <version>2.3.0-SNAPSHOT</version>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>client</artifactId>
+    <packaging>pom</packaging>
+    <name>HD Witness Client</name>
 
     <properties>  
         <product.title>${client.name}</product.title>
         <!--Global libs-->
         <qt.libs>core gui network opengl xml sql multimedia concurrent</qt.libs>
         <!-- ATTENTION!!! -lestbase should be the LATEST in the list!!! Required for Linux -->
-        <global.libs>-lcommon -lavcodec -lavdevice -lavfilter -lavformat -lavutil -lswscale -lpostproc -lprotobuf -lFestival -lestools -leststring -lestbase</global.libs>
+        <global.libs>-lcommon -lavcodec -lavdevice -lavfilter -lavformat -lavutil -lswscale -lpostproc -lFestival -lestools -leststring -lestbase</global.libs>
         <!--Specific os libs used-->
         <windows.oslibs>DbgHelp.lib -lws2_32 -lIphlpapi -lwinmm -lDxErr -ld3d9 -lopenal32 -lssleay32 -llibeay32 -lsigar appserver2.lib</windows.oslibs>
         <windows.oslibs.release/>
@@ -48,7 +48,7 @@
                 </os>
             </activation>
             <build>
-                <plugins>					
+                <plugins>                   
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>exec-maven-plugin</artifactId>
@@ -62,16 +62,16 @@
                                 </goals>
                                 <configuration>
                                     <executable>build-${arch}.bat</executable>
-                                    <workingDirectory>${basedir}/launcher</workingDirectory>		
+                                    <workingDirectory>${basedir}/launcher</workingDirectory>        
                                     <arguments>
                                         <commandlineArgs>${build.configuration}</commandlineArgs>
                                     </arguments>
                                 </configuration>
-                            </execution>							
+                            </execution>                            
                         </executions>
-                    </plugin>	
+                    </plugin>   
                 </plugins>
             </build>
-        </profile>	
+        </profile>  
     </profiles>
 </project>
