--- a/macsetup/client-dmg/maven/bin-resources/entitlements.plist
+++ b/macsetup/client-dmg/maven/bin-resources/entitlements.plist
@@ -7,6 +7,6 @@
     <key>com.apple.security.network.server</key><true/>
     <key>com.apple.security.files.user-selected.read-write</key><true/>
     <key>com.apple.security.files.bookmarks.app-scope</key><true/>
-    <key>com.apple.security.assets.movies.read-only</key><true/>
+    <key>com.apple.security.assets.movies.read-write</key><true/>
 </dict>
 </plist>
