no sign if beta = true
<==== Mercurial data ====>
Branch: release_2.2

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <license.environment>production</license.environment>
         <build.configuration>release</build.configuration>
         <buildNumber>0</buildNumber>
+        <skip.sign>true</skip.sign>
         <beta>true</beta>
 
         <qt.dir>${environment.dir}/qt5/qtbase-${arch}</qt.dir>
@@ -462,6 +463,7 @@
             </activation>
             <properties>
                 <finalName>${deb.customization.company.name}-${project.artifactId}-${release.version}.${buildNumber}-${platform}-${arch}</finalName>
+                <skip.sign>false</skip.sign>
             </properties>
         </profile>	      
     </profiles>	
