--- a/mediaserver/pom.xml
+++ b/mediaserver/pom.xml
@@ -17,14 +17,12 @@
 	<version>2.3.0-SNAPSHOT</version>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>mediaserver</artifactId>
-	<packaging>pom</packaging>
-	<name>HD Witness Media Server</name>    
 
     <properties>
         <product.title>${mediaserver.name}</product.title>  
         <!--Global libs-->		
         <qt.libs>core network xml sql concurrent multimedia</qt.libs>
-        <global.libs>-lcommon -lappserver2 -lavcodec -lavdevice -lavfilter -lavformat -lavutil -lswscale -lpostproc -lonvif</global.libs>
+        <global.libs>-lcommon -lappserver2 -lavcodec -lavdevice -lavfilter -lavformat -lavutil -lswscale -lpostproc -lonvif -lquazip</global.libs>
         <!--Specific os libs used-->
         <windows.oslibs>Ws2_32.lib DbgHelp.lib sigar.lib -lIphlpapi -lwinmm -lssleay32 -llibeay32</windows.oslibs>
         <linux.oslibs>-lmp3lame -lssl -lcrypto -lsigar -lfaac -lvpx -lvorbisenc -lvorbis</linux.oslibs>
