Bug #3218: Incorrect icons for some customizations. Add images for iOS nutech, pivothead, relong and nnodal
<==== Mercurial data ====>
Branch: release_2.2

--- a/.hgignore
+++ b/.hgignore
@@ -239,6 +239,7 @@ ios-client/Podfile
 ios-client/Pods
 ios-client/HDWitness/Settings.bundle/Root.plist
 ios-client/Podfile.lock
+ios-client/.ruby-version
 
 launcher/x86
 launcher/x64
