added support for Webkit
<==== Mercurial data ====>
Branch: master

--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,8 @@
         <qtlib10>X11Extras</qtlib10>                    
         <!-- qtlib11 is used in macos profile only -->
         <qtlib11 />
-        <!-- <qtlib12>WebKit</qtlib12> -->
+        <!-- <qtlib12>WebKit</qtlib12> 
+        <qtlib13>WebKitWidgets</qtlib13>-->
 
         <!--QT plugins used-->      
         <qtplugin1>imageformats</qtplugin1>
