--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,10 @@
         <qtlib11>PrintSupport</qtlib11>
         <qtlib12>WebKit</qtlib12> 
         <qtlib13>WebKitWidgets</qtlib13>
+        <qtlib14>MultimediaWidgets</qtlib14>
+        <qtlib15>Quick</qtlib15>
+        <qtlib16>Qml</qtlib16>
+        <qtlib17>Positioning</qtlib17>
 
         <!--QT plugins used-->      
         <qtplugin1>imageformats</qtplugin1>
